--- a/resume.html
+++ b/resume.html
@@ -9,11 +9,11 @@
   </head>
   <body>
     <header class="flex mt-12 ml-12">
-      <div class="w-1/4">
-        <img class="rounded-full" src="/스크린샷 2022-09-30 오전 11.30.33.png">
+      <div class="w-1/3">
+        <img class="rounded-full" src="/heeji.jpg">
       </div>
-      <div class="ml-12 w-3/4">
-        <h2 class="text-4xl lg:text-7xl">heeji
+      <div class="ml-12 w-2/3 flex flex-col justify-center aline-center">
+        <h2 class="text-6xl lg:text-7xl font-bold">heeji
           <span class="text-[#123464]">.yang</span>
         </h2>
         <div class="mt-3 text-m text-[#123464]">
@@ -24,14 +24,14 @@
     <main class="flex flex-col mt-12 ml-12">
       <section>
         <h2 class="text-3xl text-[#123464] font-bold">Contact & Channels</h2>
-        <ul class="text-left list-disc">
+        <ul class="text-left list-disc list-inside">
           <li>010-0000-0000</li>
           <li>abcdefg@likelion.org</li>
         </ul>
       </section>
       <section class="mt-12">
         <h2 class="text-3xl text-[#123464] font-bold">Skills</h2>
-        <ol class="ml-5 mt-3 list-disc">
+        <ol class="ml-5 mt-3 list-disc list-inside">
           <h3 class="text-xl font-bold">Front-end</h3>
           <li>HTML</li>
           <li>CSS</li>
@@ -42,7 +42,7 @@
           <li>Tailwind</li>
           <li>React</li>
         </ol>
-        <ol class="text-m ml-5 mt-3 list-disc">
+        <ol class="text-m ml-5 mt-3 list-disc list-inside">
           <h3 class="text-xl font-bold">Collaboration Tools</h3>
           <li>Figma</li>
           <li>VS Code</li>
@@ -53,45 +53,63 @@
       </section>
       <section class="mt-12">
         <h2 class="text-3xl text-[#123464] font-bold">Projects</h2>
-        <div class="ml-5 mt-5">
+        <div class="ml-5 mt-8">
           <h3 class="text-xl font-bold">10000hours</h3>
-          <span>1day</span>
+          <span class="text-gray-500">1day</span>
           <p>Lorem ipsum dolor sit amet.</p>
         </div>
-        <div class="ml-5 mt-5">
+        <div class="ml-5 mt-8">
           <h3 class="text-xl font-bold">Vending Machine</h3>
-          <span>2day</span>
+          <span class="text-gray-500">2day</span>
           <p>Lorem ipsum dolor sit amet.</p>
         </div>
-        <div class="ml-5 mt-5">
+        <div class="ml-5 mt-8">
           <h3 class="text-xl font-bold">Landing Page</h3>
-          <span>3day</span>
+          <span class="text-gray-500">3day</span>
           <p>Lorem ipsum dolor sit amet.</p>
         </div>
-        <div class="ml-5 mt-5">
+        <div class="ml-5 mt-8">
           <h3 class="text-xl font-bold">Orange Market</h3>
-          <span>7day</span>
+          <span class="text-gray-500">7day</span>
           <p>Lorem ipsum dolor sit amet.</p>
         </div>
-        <div class="ml-5 mt-5">
+        <div class="ml-5 mt-8">
           <h3 class="text-xl font-bold">Personal Project1</h3>
-          <span>7day</span>
+          <span class="text-gray-500">7day</span>
           <p>Lorem ipsum dolor sit amet.</p>
         </div>
-        <div class="ml-5 mt-5">
+        <div class="ml-5 mt-8">
           <h3 class="text-xl font-bold">Personal Project2</h3>
-          <span>7day</span>
+          <span class="text-gray-500">7day</span>
           <p>Lorem ipsum dolor sit amet.</p>
         </div>
       </section>
       <section class="mt-12">
         <h2 class="text-3xl text-[#123464] font-bold">Experience</h2>
+        <div class="ml-5 mt-8">
+          <h3 class="text-xl font-bold">Like lion Front-end School 3</h3>
+          <span class="text-gray-500">2022.08~</span>
+          <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="ml-5 mt-8">
+          <h3 class="text-xl font-bold">Experience2</h3>
+          <span class="text-gray-500">2021.02~2021.11</span>
+          <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="ml-5 mt-8">
+          <h3 class="text-xl font-bold">Experience3</h3>
+          <span class="text-gray-500">2019.01~2019.06</span>
+          <p>Lorem ipsum dolor sit amet.</p>
+        </div>
       </section>
       <section class="mt-12">
         <h2 class="text-3xl text-[#123464] font-bold">Education</h2>
+        <div class="ml-5 mt-8">
+          <h3 class="text-xl font-bold">University</h3>
+          <span class="text-gray-500">2017.03~2021.02</span>
+          <p>major ICT smart agriculture technology</p>
+        </div>
       </section>
     </main>
-
-
   </body>
 </html>
