--- a/resume.html
+++ b/resume.html
@@ -9,105 +9,116 @@
   </head>
   <body>
     <header class="flex mt-12 ml-12">
-      <div class="w-1/3">
-        <img class="rounded-full" src="/heeji.jpg">
+      <div class="w-1/4">
+        <img class="rounded-full" src="/공룡.png">
       </div>
       <div class="ml-12 w-2/3 flex flex-col justify-center aline-center">
-        <h2 class="text-6xl lg:text-7xl font-bold">heeji
+        <h2 class="text-6xl lg:text-6xl font-bold">heeji
           <span class="text-[#123464]">.yang</span>
         </h2>
-        <div class="mt-3 text-m text-[#123464]">
-          Front-end engineer
+        <div class="text-[#123464]">
+          <p class="mt-5 text-xl">Front-end engineer</p>
+          <p class="mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, at?</p>
         </div>
       </div>
     </header>
-    <main class="flex flex-col mt-12 ml-12">
+    <main class="flex flex-col m-12">
       <section>
-        <h2 class="text-3xl text-[#123464] font-bold">Contact & Channels</h2>
+        <h2 class="bg-sky-100 text-3xl text-[#123464] font-bold">Contact & Channels</h2>
         <ul class="text-left list-disc list-inside">
-          <li>010-0000-0000</li>
-          <li>abcdefg@likelion.org</li>
+          <li class="m-5">010-0000-0000</li>
+          <li class="m-5">abcdefg@likelion.org</li>
+          <li class="m-5">GitHub</li>
+          <li class="m-5">Notion</li>
         </ul>
       </section>
       <section class="mt-12">
-        <h2 class="text-3xl text-[#123464] font-bold">Skills</h2>
+        <h2 class="bg-sky-100 text-3xl text-[#123464] font-bold">Skills</h2>
         <ol class="ml-5 mt-3 list-disc list-inside">
           <h3 class="text-xl font-bold">Front-end</h3>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>Sass</li>
-          <li>Bootstrap</li>
-          <li>TypeScript</li>
-          <li>Tailwind</li>
-          <li>React</li>
+          <li class="m-2">JavaScript</li>
+          <li class="m-2">React</li>
+          <li class="m-2">HTML</li>
+          <li class="m-2">CSS, Tailwind, Sass</li>
+          <li class="m-2">Bootstrap</li>
+          <li class="m-2">TypeScript</li>
         </ol>
-        <ol class="text-m ml-5 mt-3 list-disc list-inside">
+        <ol class="text-m ml-5 mt-5 list-disc list-inside">
           <h3 class="text-xl font-bold">Collaboration Tools</h3>
-          <li>Figma</li>
-          <li>VS Code</li>
-          <li>Git, GitHub</li>
-          <li>Discord</li>
-          <li>Notion</li>
+          <li class="m-2">Figma</li>
+          <li class="m-2">VS Code</li>
+          <li class="m-2">Git, GitHub</li>
+          <li class="m-2">Notion</li>
         </ol>
       </section>
       <section class="mt-12">
-        <h2 class="text-3xl text-[#123464] font-bold">Projects</h2>
+        <h2 class="bg-sky-100 text-3xl text-[#123464] font-bold">Projects</h2>
         <div class="ml-5 mt-8">
-          <h3 class="text-xl font-bold">10000hours</h3>
-          <span class="text-gray-500">1day</span>
-          <p>Lorem ipsum dolor sit amet.</p>
+          <h3 class="text-xl font-bold">1만 시간의 법칙</h3>
+          <span class="mt-2 text-gray-500">1day</span>
+          <p class="mt-2">JavaScript, HTML, CSS</p>
+          <p class="mt-2">Lorem ipsum dolor sit amet.</p>
         </div>
         <div class="ml-5 mt-8">
-          <h3 class="text-xl font-bold">Vending Machine</h3>
+          <h3 class="text-xl font-bold">벤딩머신</h3>
           <span class="text-gray-500">2day</span>
-          <p>Lorem ipsum dolor sit amet.</p>
+          <p class="mt-2">JavaScript, HTML, CSS</p>
+          <p class="mt-2">Lorem ipsum dolor sit amet.</p>
         </div>
         <div class="ml-5 mt-8">
-          <h3 class="text-xl font-bold">Landing Page</h3>
+          <h3 class="text-xl font-bold">랜딩 페이지</h3>
           <span class="text-gray-500">3day</span>
-          <p>Lorem ipsum dolor sit amet.</p>
+          <p class="mt-2">JavaScript, HTML, CSS</p>
+          <p class="mt-2">Lorem ipsum dolor sit amet.</p>
         </div>
         <div class="ml-5 mt-8">
-          <h3 class="text-xl font-bold">Orange Market</h3>
+          <h3 class="text-xl font-bold">감귤마켓</h3>
           <span class="text-gray-500">7day</span>
-          <p>Lorem ipsum dolor sit amet.</p>
+          <p class="mt-2">JavaScript, HTML, CSS</p>
+          <p class="mt-2">Lorem ipsum dolor sit amet.</p>
         </div>
         <div class="ml-5 mt-8">
-          <h3 class="text-xl font-bold">Personal Project1</h3>
+          <h3 class="text-xl font-bold">개인 프로젝트1</h3>
           <span class="text-gray-500">7day</span>
-          <p>Lorem ipsum dolor sit amet.</p>
+          <p class="mt-2">JavaScript, HTML, CSS</p>
+          <p class="mt-2">Lorem ipsum dolor sit amet.</p>
         </div>
         <div class="ml-5 mt-8">
-          <h3 class="text-xl font-bold">Personal Project2</h3>
+          <h3 class="text-xl font-bold">개인 프로젝트2</h3>
           <span class="text-gray-500">7day</span>
-          <p>Lorem ipsum dolor sit amet.</p>
+          <p class="mt-2">JavaScript, HTML, CSS</p>
+          <p class="mt-2">Lorem ipsum dolor sit amet.</p>
         </div>
       </section>
       <section class="mt-12">
-        <h2 class="text-3xl text-[#123464] font-bold">Experience</h2>
+        <h2 class=" bg-sky-100 text-3xl text-[#123464] font-bold">Experience</h2>
         <div class="ml-5 mt-8">
-          <h3 class="text-xl font-bold">Like lion Front-end School 3</h3>
-          <span class="text-gray-500">2022.08~</span>
-          <p>Lorem ipsum dolor sit amet.</p>
+          <h3 class="text-xl font-bold">Experience1</h3>
+          <span class="text-gray-500">2022.03~</span>
+          <p class="mt-2">Lorem ipsum dolor sit amet.</p>
         </div>
         <div class="ml-5 mt-8">
           <h3 class="text-xl font-bold">Experience2</h3>
-          <span class="text-gray-500">2021.02~2021.11</span>
-          <p>Lorem ipsum dolor sit amet.</p>
+          <span class="text-gray-500">2021.02~2022.01</span>
+          <p class="mt-2">Lorem ipsum dolor sit amet.</p>
         </div>
         <div class="ml-5 mt-8">
           <h3 class="text-xl font-bold">Experience3</h3>
-          <span class="text-gray-500">2019.01~2019.06</span>
-          <p>Lorem ipsum dolor sit amet.</p>
+          <span class="text-gray-500">2019.01~2020.06</span>
+          <p class="mt-2">Lorem ipsum dolor sit amet.</p>
         </div>
       </section>
       <section class="mt-12">
-        <h2 class="text-3xl text-[#123464] font-bold">Education</h2>
+        <h2 class="bg-sky-100 text-3xl text-[#123464] font-bold">Education</h2>
         <div class="ml-5 mt-8">
-          <h3 class="text-xl font-bold">University</h3>
+          <h3 class="text-xl font-bold">멋쟁이 사자처럼 프론트엔드 스쿨 3기</h3>
+          <span class="text-gray-500">2022.08~2023.01</span>
+          <p class="mt-2">멋쟁이 사자처럼 프론트엔드 스쿨 3기 수료</p>
+        </div>
+        <div class="ml-5 mt-8">
+          <h3 class="text-xl font-bold">00대학교</h3>
           <span class="text-gray-500">2017.03~2021.02</span>
-          <p>major ICT smart agriculture technology</p>
+          <p class="mt-2">.....졸업</p>
         </div>
       </section>
     </main>
