--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header class="flex mt-12 ml-12">
       <div class="w-1/4">
-        <img class="rounded-full" src="공룡.png">
+        <img class="rounded-full" src="dino.png">
       </div>
       <div class="ml-12 w-2/3 flex flex-col justify-center aline-center">
         <h2 class="text-6xl lg:text-6xl font-bold">heeji
